[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Lobby/ClassesMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD/assets/open-sans/OpenSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.27451, 0.262745, 0.262745, 1 )
font_data = ExtResource( 3 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.70764
margin_top = 10.0
margin_right = -11.2924
margin_bottom = -10.0
size_flags_horizontal = 0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLobbyBtn" type="Button" parent="MarginContainer"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Quit Lobby"

[node name="GameStatus" type="Label" parent="MarginContainer"]
margin_left = 813.0
margin_right = 1087.0
margin_bottom = 45.0
size_flags_horizontal = 6
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.521569, 0.0666667, 0.0666667, 1 )
text = "Game is running..."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = 349.0
margin_right = 1900.0
margin_bottom = 711.0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_top = 181.0
margin_right = 1512.0
margin_bottom = 181.0
size_flags_horizontal = 7
size_flags_vertical = 4

[node name="ClassesMenu" parent="MarginContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 1516.0
margin_right = 1900.0
margin_bottom = 362.0

[node name="PlayerReadyBtn" type="Button" parent="MarginContainer"]
margin_left = 887.0
margin_top = 1010.0
margin_right = 1012.0
margin_bottom = 1060.0
rect_min_size = Vector2( 125, 50 )
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Ready"
[connection signal="pressed" from="MarginContainer/QuitLobbyBtn" to="." method="_on_QuitLobbyBtn_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerReadyBtn" to="." method="_on_PlayerReadyBtn_pressed"]
